2009-05-27  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/configurar_agente.php: Style correction.

	* operation/snmpconsole/snmp_view.php: Fixed creation link when
	the agent is not found by address. Fixes #2777409

	* godmode/agentes/agent_manager.php: Use address as name on creation
	when it's given.

2009-05-27  Esteban Sanchez  <estebans@artica.es>

	* general/header.php: Added code to ignored parameters. Fixes #2779381

	* include/functions_ui.php: Ignore form operations on get_url_refresh()

2009-05-27  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/configurar_agente.php: Use pandora functions to
	create and update modules. Some fixes when these operations could
	not be done so the editor appears again. Fixes #2762316

	* godmode/agentes/module_manager_editor.php: Some patches to work
	better with configurar_agente.php

	* include/functions_modules.php: Avoid setting an empty name on
	update_agent_module()

2009-05-27  Esteban Sanchez  <estebans@artica.es>

	* reporting/fgraph.php: Do not short agent name on
	graphic_combined_module(). It was causing collisions. Fixes #2785193.

	* reporting/pchart_graph.php: Use AddSerie on combined_graph().

2009-05-27  Esteban Sanchez  <estebans@artica.es>

	* include/functions_visual_map.php: Problem fixed on
	get_layout_status() with label elements. Fixed definitely
	#2787197.

2009-05-27  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: return_status_agent() renamed to
	get_agent_status(). Improved get_agentmodule_status() documentation
	and code.

	* include/functions_visual_map.php: Styles correction. Use a switch
	instead of many ifs. Fixed get_layout_status() so the bad values have
	preference. Fixes #2787197.

2009-05-25  Esteban Sanchez  <estebans@artica.es>

	* godmode/modules/manage_network_components.php: Fixed a typo on
	onsubmit paramter that was avoiding asking for confirmation.

2009-05-25  Esteban Sanchez  <estebans@artica.es>
